--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -36,9 +36,9 @@
       </form>
     </div>
 
-    @if (this.store.loading()) {
+    @if (this.store.login().loading) {
     <app-button
-      [disabled]="this.form.invalid || this.store.loading()"
+      [disabled]="this.form.invalid || this.store.login().loading"
       (click)="login()"
       class="mt-4 rounded-none rounded-t-lg"
       id="login"
@@ -52,7 +52,7 @@
     ></p-progressBar>
     } @else {
     <app-button
-      [disabled]="this.form.invalid || this.store.loading()"
+      [disabled]="this.form.invalid || this.store.login().loading"
       (click)="login()"
       class="mt-4"
       id="login"
@@ -62,7 +62,7 @@
 
     <h3 class="pt-2 flex justify-end">
       Dont have account?<span
-        class="opacity-50 pl-2 hover:opacity-100 transition"
+        class="opacity-50 pl-2 hover:opacity-100 transition" (click)="redirectRegisterAcount()"
         >Register here</span
       >
     </h3>
@@ -109,20 +109,6 @@
     </h3>
   </section>
   <div class="hidden lg:flex p-5 lg:flex-auto w-80">
-    <div class="fixed top-1 right-1 flex items-center">
-      <h1
-        class="hidden xl:flex font-urbaninst text-primary text-xl font-semibold"
-      >
-        <span class="opacity-50 text-2xl">Register </span>
-      </h1>
-      <img
-        class="hidden xl:flex mx-1 pl-2"
-        src="../../../assets/icons/seta-direita.svg"
-        alt="seta-direita"
-      />
-      <app-button class="p-5" id="login">Register Now</app-button>
-    </div>
-
     <div class="fixed bottom-16 flex items-center">
       <h1 class="font-urbaninst text-primary text-3xl font-semibold">
         <span class="opacity-50">Think about saying:</span>
@@ -162,3 +148,5 @@
     />
   </div>
 </div>
+<p-toast></p-toast>
+
