--- a/src/app/components/input-mask/input-mask.component.html
+++ b/src/app/components/input-mask/input-mask.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="form" class="telefone_input flex flex-col">
+<div [formGroup]="form" class="phoneNumber_input flex flex-col">
   <div class="flex pb-1">
     <label class="text-primary pb-0 text-base pt-2 font-inter">{{
       label
