--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="lg:flex bg-tertiary">
+<div class="lg:flex bg-backGround">
   <section
     id="container-login"
     class="h-full min-h-screen flex justify-center flex-col pr-5 pl-5 bg-white lg:inline-flex lg:border-r lg:border-border-1 lg:shadow-lg lg:ml-auto lg:h-auto lg:flex-auto lg:max-w-max lg:min-w-144"
