--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,9 @@
 body {
     height: 100%;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
