--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -95,7 +95,7 @@
         <h1 class="text-base font-bold">{{ coowork.name }}</h1>
         <div class="flex justify-between">
           <span class="text-sm text-gray opacity-40">
-            {{ getCategorieByCoowork(coowork.id) }}
+            {{ getCategorieByCoowork(coowork.id, this.storeCoowork.cooworkList().cooworks) }}
           </span>
 
           <span class="flex gap-1 text-sm text-yellow">
@@ -104,7 +104,7 @@
           </span>
         </div>
         <span class="text-sm font-light text-green"> 
-          {{getDayPrices(coowork.id)}} Day </span>
+          {{getDayPrices(coowork.id, this.storeCoowork.cooworkList().cooworks)}} Day </span>
       </li>
       } }
     </ul>
