--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
-<div class="lg:flex bg-backGround">
+<div class="lg:flex p-4">
   <section
     id="container-login"
-    class="h-full min-h-screen flex justify-center flex-col pr-5 pl-5 bg-white lg:inline-flex lg:border-r lg:border-border-1 lg:shadow-lg lg:ml-auto lg:h-auto lg:flex-auto lg:max-w-max lg:min-w-144"
+    class="h-full min-h-screen flex justify-center flex-col lg:inline-flex lg:border-r lg:border-border-1 lg:shadow-lg lg:ml-auto lg:h-auto lg:flex-auto lg:max-w-max lg:min-w-144"
   >
     <img
       class="absolute top-10"
