--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -13,36 +13,36 @@
   <div class="description">
     <h1 class="text-base font-bold mt-5 mb-2">Space description</h1>
     <h3 class="text-base text-primary opacity-40">
-      {{ this.cooworkDetails.detail.description }}
+      <!-- {{ this.cooworkDetails.detail.description }} -->
     </h3>
   </div>
 
   <div class="Place">
     <h1 class="text-base font-bold mt-5 mb-2">Day price</h1>
     <h3 class="text-base text-primary opacity-40">
-      R$: {{ this.place.day_price }}.00 reais
+      <!-- R$: {{ this.place.day_price }}.00 reais -->
     </h3>
     <h1 class="text-base font-bold mt-5 mb-2">Type</h1>
     <h3 class="text-base text-primary opacity-40">
-      {{ this.place.type.replace("_", " ") }}
+      <!-- {{ this.place.type.replace("_", " ") }} -->
     </h3>
     <h1 class="text-base font-bold mt-5 mb-2">Capacity</h1>
     <h3 class="text-base text-primary opacity-40">
-      {{ this.place.capacity }} Peoples
+      <!-- {{ this.place.capacity }} Peoples -->
     </h3>
   </div>
 
   <div class="Location text-base">
     <h1 class="font-bold mt-5 mb-2">Location</h1>
     <div class="text-primary opacity-40">
-      <h3 class="">
+      <!-- <h3 class="">
         City: {{ address.city }} / Country: {{ address.country }}
       </h3>
       <h3 class="">
         Road: {{ address.road }} / Number:
         {{ address.number }}
       </h3>
-      <h3 class="mb-5">Complement: {{ address.complement }}</h3>
+      <h3 class="mb-5">Complement: {{ address.complement }}</h3> -->
     </div>
   </div>
 
